[package]
name = "sorbet_stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pokey_logger = "0.3.1"
serde_json = "1.0.81"

[dependencies.clap]
version = "3.1.18"
features = ["derive"]

[dependencies.serde]
version = "1.0.137"
features = ["derive"]